# uv-ansible-example

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker_local_dev_container_build.sh  docker_local_dev_container_run.sh  pyproject.toml
uv-ansible-example/: ansible.cfg  inventory.yaml  requirements.yaml  test-playbook.yaml
